# gi_cleaner

./: README.ja.md  README.md  pyproject.toml
src/gi_cleaner/: __init__.py  main.py
