[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gi_cleaner"
version = "0.1.0"
description = "A tool to clean files that are ignored by .gitignore"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["git", "gitignore", "cleanup", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]
dependencies = [
    "pathspec>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
gi_cleaner = "gi_cleaner.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/gi_cleaner"
Repository = "https://github.com/yourusername/gi_cleaner"
Issues = "https://github.com/yourusername/gi_cleaner/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/gi_cleaner"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
